test/library/standard/BigInteger/divideByZero.good
divideByZero.chpl:5: error: halt reached - Attempt to divide by zero
