test/library/standard/BigInteger/divideByZero.chpl
use BigInteger;

var a: bigint = 15;
var b = 0;
var res: bigint = a / b;
